--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-    "name": "my-webpack-project",
-    "version": "1.0.0",
-    "description": "My webpack project",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --mode=production --node-env=production",
-        "debug": "webpack --mode development",
-        "build:dev": "webpack --mode=development",
-        "build:prod": "webpack --mode=production --node-env=production",
-        "watch": "webpack --watch",
-        "serve": "webpack serve"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Ejento14/electro-unique.git"
-    },
-    "author": "Rohit Mehta, Manmeet Singh",
-    "license": "GPL-2.0",
-    "bugs": {
-        "url": "https://github.com/Ejento14/electro-unique/issues"
-    },
-    "homepage": "https://electro-unique.tech",
-    "devDependencies": {
-        "@webpack-cli/generators": "^3.0.1",
-        "css-loader": "^6.7.3",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.7.2",
-        "style-loader": "^3.3.1",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.11.1"
-    }
+  "name": "electro-unique",
+  "version": "1.1.0",
+  "description": "Website for electronics club",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "debug": "webpack --mode development",
+    "debug:watch": "webpack --mode development --watch",
+    "deploy": "cp ./CNAME ./dist/ && gh-pages -d dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ejento14/electro-unique.git"
+  },
+  "author": "Rohit Mehta, Manmeet Singh",
+  "license": "GPL-2.0",
+  "bugs": {
+    "url": "https://github.com/Ejento14/electro-unique/issues"
+  },
+  "homepage": "https://github.com/Ejento14/electro-unique#readme",
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "gh-pages": "^4.0.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^7.8.3",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
